--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -11,7 +11,7 @@
 	<h1>学习系统欢迎你</h1>
 	<h2>学习系统欢迎你</h2>
 
-	<p>注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。</p>
+	<p>注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。<br />注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。</p>
 	<p>
 	注释不会被浏览器显示出来。
 	换言之，浏览器不会将注释中的内容呈现给用户。
