--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -8,13 +8,18 @@
 	<!--<link rel="shortcut icon" type="image/ico" href="" media="screen" />-->
 </head>
 <body>
-	<h1>学习系统欢迎你</h1>
-	<h2>学习系统欢迎你</h2>
-
-	<p>注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。<br />注释不会被浏览器显示出来。换言之，浏览器不会将注释中的内容呈现给用户。</p>
-	<p>
-	注释不会被浏览器显示出来。
-	换言之，浏览器不会将注释中的内容呈现给用户。
-	</p>
+	<div>页头</div>
+	<div>
+		<div>最新消息</div>
+		<div>
+			<div>
+				<div>宣传图片</div>
+				<span>正文</span>
+				<span>评论</span>
+			</div>
+			<div>右边</div>
+		</div>
+	</div>
+	<div>页尾</div>
 </body>
 </html>
