header main footer

--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -8,8 +8,8 @@
 	<!--<link rel="shortcut icon" type="image/ico" href="" media="screen" />-->
 </head>
 <body>
-	<div>页头</div>
-	<div>
+	<header>页头</header>
+	<main>
 		<div>最新消息</div>
 		<div>
 			<div>
@@ -19,7 +19,7 @@
 			</div>
 			<div>右边</div>
 		</div>
-	</div>
-	<div>页尾</div>
+	</main>
+	<footer>页尾</footer>
 </body>
 </html>
