--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -10,7 +10,9 @@
 <body>
 	<header>页头</header>
 	<main>
-		<div>最新消息</div>
+		<div>
+			<a href="/welcome.html" target="_blank" title="欢迎你">大家欢迎你</a>
+		</div>
 		<div>
 			<div>
 				<div>宣传图片</div>
