--- a/staticpage/wwwroot/FAQ.html
+++ b/staticpage/wwwroot/FAQ.html
@@ -1,10 +1,36 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+	<meta charset="utf-8" />
+	<title>常见问题-学习系统</title>
 </head>
 <body>
-
+	<div>
+		<div>
+			<h1>常见问题</h1>
+			<hr />
+			<ul>
+				<li>
+					<h2>账户</h2>
+					<ul>
+						<li>Q：邀请码是怎么一回事？</li>
+						<li>Q：为什么会提示“邀请人数达到上限”？</li>
+						<li>Q：系统如何是确定“最后（上次）登录时间”的？</li>
+						<li>Q：“最后登录时间”有什么用处？</li>
+						<li>Q：邮箱有什么作用？</li>
+						<li>Q：为什么我收不到邮件通知？</li>
+					</ul>
+				</li>
+				<li>
+					<h2>帮帮点</h2>
+					<ul>
+						<li>Q：什么是帮帮点？有什么用处？</li>
+						<li>Q：如何才能获得帮帮点？</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div></div>
+	</div>
 </body>
 </html>
