edit FAQ.html with a tag link to Credit.html

--- a/staticpage/wwwroot/FAQ.html
+++ b/staticpage/wwwroot/FAQ.html
@@ -25,7 +25,9 @@
 					<h2>帮帮点</h2>
 					<ul>
 						<li>Q：什么是帮帮点？有什么用处？</li>
-						<li>Q：如何才能获得帮帮点？</li>
+						<li>
+							<a href="FAQ/Credit.html#gain" target="_blank">Q：如何才能获得帮帮点？</a>
+						</li>
 					</ul>
 				</li>
 			</ul>
