--- a/staticpage/wwwroot/FAQ/Credit.html
+++ b/staticpage/wwwroot/FAQ/Credit.html
@@ -1,10 +1,109 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+	<meta charset="utf-8" />
+	<title>帮帮点-常见问题-学习系统</title>
 </head>
 <body>
+	<div>
+		<div>
+			<h1>帮帮点</h1>
+			<hr />
+			<ul>
+				<li>
+					<h2>Q：什么是帮帮点？有什么用处？</h2>
+					<p>
+						帮帮点 和一般论坛的“积分”类似，主要用于衡量用户的社区活跃和贡献。<br />
+						首先，这就是你在“一起帮”的功勋章，表彰你对社区的贡献！(￢_￢)瞄<br />
+						其次，根据用户点数，我们整理出了以下“晋级”路径。每达到一个等级（等级图标正在制作中……），都会掉落相应的  帮帮币 。
+					</p>
+					<table></table>
+					<p>
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+						此外，点数越多，每次登录获得的  帮帮豆 就会更多一些：砸人的时候更阔气一些吧。<br />
+						另：一张表区分帮帮“点/豆/币”
+					</p>
+				</li>
+				<li>
+					<a name="gain"></a>
+					<h2>Q：如何才能获得帮帮点？</h2>
+					<p>
+						一句话：尽可能的多的参加下社区活动。<br />
+						目前的奖励政策如下表所示：
+					</p>
+					<table>
 
+					</table>
+					<p>政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。</p>
+				</li>
+			</ul>
+		</div>
+		<div></div>
+	</div>
 </body>
 </html>
