test table tag html and css

--- a/staticpage/wwwroot/FAQ/Credit.html
+++ b/staticpage/wwwroot/FAQ/Credit.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>帮帮点-常见问题-学习系统</title>
+	<link rel="stylesheet" type="text/css" href="Credit.css" />
 </head>
 <body>
 	<div>
@@ -96,8 +97,33 @@
 						一句话：尽可能的多的参加下社区活动。<br />
 						目前的奖励政策如下表所示：
 					</p>
-					<table>
-
+					<table style="border-">
+						<thead>
+							<tr>
+								<th>社区活动</th>
+								<th>点数</th>
+								<th>备注</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td colspan="3">*账号相关</td>
+							</tr>
+							<tr>
+								<td rowspan="2">注册<br />邀请注册</td>
+								<td>10</td>
+								<td>使用了别人的邀请码</td>
+							</tr>
+							<tr>
+								<td>10</td>
+								<td>别人使用了你的邀请码完成注册</td>
+							</tr>
+							<tr>
+								<td>激活Email</td>
+								<td>20</td>
+								<td>不是填写了Email就有点数，Email必须被验证激活</td>
+							</tr>
+						</tbody>
 					</table>
 					<p>政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。政策可能有实时调整，稍许滞后，还敬请谅解。</p>
 				</li>
