Master: Article list page HTML file header navigation bar content completed 80%.

--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -2,13 +2,99 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="keywords" content="学习 文章" />
-	<meta name="description" content="学习笔记 文章系统" />
-	<title></title>
-	<!--<link rel="shortcut icon" type="image/ico" href="" media="screen" />-->
+	<meta name="description" content="精品学习文章笔记，知识记录管理系统" />
+	<title>精品文章-学习系统</title>
+	<link rel="shortcut icon" type="image/ico" href="/Images/logo-big.ico" media="screen" />
 </head>
 <body>
-	<header>页头</header>
+	<header>
+		<div class="navbar">
+			<div class="container">
+				<a href="/">
+					<img src="/Images/logo-big.ico" alt="logo" />
+				</a>
+				<p>
+					<span>学习系统</span>
+					<span>- 知识管理平台</span>
+				</p>
+				<a href="/Message/Mine.html">
+					<span></span>
+				</a>
+				<div>
+					<ul>
+						<li>
+							<a href="#"><span></span>求助</a>
+							<ul>
+								<li>督导班</li>
+								<li>
+									<a href="/Course/Confusion/New.html"><span></span>督导班</a>
+								</li>
+								<li>
+									<a href="#"><span></span>列表</a>
+								</li>
+								<li>
+									<a href="/Course/Confusion/New.html"><span></span>疑问发布</a>
+								</li>
+								<li>
+									<a href="/Course/Confusion.html"><span></span>疑问列表</a>
+								</li>
+								<li class="line"></li>
+								<li>
+									<a href="#"><span></span>列表</a>
+								</li>
+								<li>
+									<a href="/Problem/New.html"><span></span>发布</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="#"><span></span>督促</a>
+							<ul>
+								<li>
+									<a href="/Plan/New.html"><span></span>求督促</a>
+								</li>
+								<li>
+									<a href="/Plan.html"><span></span>督促别人</a>
+								</li>
+								<li>
+									<a href="#"><span></span>我的目标</a>
+								</li>
+								<li>
+									<a href="#"><span></span>我的督促</a>
+								</li>
+								<li>
+									<a><span></span>未交作业</a>
+								</li>
+								<li>
+									<a href="#"><span></span>交作业<span>!</span></a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="/Article.html"><span></span>文章</a>
+							<ul>
+								<li>
+									<a href="Article.html"><span></span>列表</a>
+								</li>
+								<li>
+									<a href="/Article/_Apply.html"><span></span>开通</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="#"><span></span>用户</a>
+							<ul></ul>
+						</li>
+						<li>
+							<a href="#"><span></span>后台</a>
+							<ul></ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="message"></div>
+	</header>
 	<main>
 		<div>
 			<a href="/welcome.html" target="_blank" title="欢迎你">大家欢迎你</a>
