--- a/staticpage/wwwroot/testflex.html
+++ b/staticpage/wwwroot/testflex.html
@@ -11,18 +11,48 @@
 
         div {
             display: flex;
-            /*flex-direction: column-reverse;
-            flex-wrap: wrap;*/
-            flex-flow: row wrap;
-            justify-content: flex-end;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            /*flex-flow: row wrap;*/
+
+            justify-content: space-evenly;
             align-items: flex-end;
+
+            align-content: center;
+
+            height: 1000px;
+        }
+
+        p {
+
+        }
+
+       /* .item1 {
+            flex-grow: 1;
+        }
+        .item2 {
+            flex-grow: 2;
+        }
+        .item3 {
+            flex-grow: 1;
+        }*/
+
+       .item1 {
+           flex-shrink: 1;
+       }
+        .item2 {
+            flex-shrink: 0.5;
+        }
+        .item3 {
+            flex-shrink: 1;
         }
     </style>
 </head>
 <body>
     <div>
-        <p style="width: 200px;height: 200px;background-color: bisque;">item-1</p>
-        <p style="width: 300px;height: 300px;background-color: yellowgreen;">item-2</p>
+        <p class="item1" style="width: 200px;height: 200px;background-color: bisque;">item-1</p>
+        <p class="item2" style="width: 300px;height: 300px;background-color: yellowgreen;">item-2item-2item-2item-2item-2item-2item-2item-2item-2item-2item-2</p>
+        <p class="item3" style="width: 200px;height: 200px;background-color: bisque;">item-3</p>
     </div>
 </body>
 </html>
