Article.html add bootstrap.css

--- a/staticpage/wwwroot/Article.html
+++ b/staticpage/wwwroot/Article.html
@@ -3,12 +3,15 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="精品学习文章笔记，知识记录管理系统" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>精品文章-学习系统</title>
 	<link rel="shortcut icon" type="image/ico" href="/Images/logo-big.ico" media="screen" />
+	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+	<link rel="stylesheet" href="css/Article.css" />
 </head>
 <body>
 	<header>
-		<div class="navbar">
+		<div class="navbar ">
 			<div class="container">
 				<a href="/">
 					<img src="/Images/logo-big.ico" alt="logo" />
