--- a/staticpage/wwwroot/test/bootstrap/bootstrap-components.html
+++ b/staticpage/wwwroot/test/bootstrap/bootstrap-components.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bootstrap-components.css" />
 </head>
 <body>
-    <!--<div class="alert alert-primary" role="alert">
+    <div class="alert alert-primary" role="alert">
         A simple primary alert—check it out!
     </div>
 
@@ -111,12 +111,34 @@
     <hr />
 
     <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Primary link</a>
-    <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>-->
+    <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Link</a>
 
     <button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
     <button type="button" class="btn btn-secondary btn-lg" disabled>Button</button>
 
+    <hr />
+
     <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
     <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Link</a>
+
+    <hr />
+
+    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false">
+        Single toggle
+    </button>
+
+    <hr />
+
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+            <input type="radio" name="options" id="option1" checked> Active
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option2"> Radio
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="options" id="option3"> Radio
+        </label>
+    </div>
 </body>
 </html>
