--- a/staticpage/wwwroot/htmlpage.html
+++ b/staticpage/wwwroot/htmlpage.html
@@ -7,8 +7,14 @@
 
 </head>
 <body>
+    <button><</button>
+    <button>></button>
 
+    <a href="http://www.baidu.com" target="_blank">点击填入</a>
+    <input type="text" />
+    <button id="go">→</button>
 
+    <script src="js/events.js"></script>
     <script type="text/javascript">
         //var str = "zhiye";
         //var problem =
