VUE: study data bind and v-bind / v-if / v-show / v-for

--- a/zssapicore/wwwroot/htmlpage.html
+++ b/zssapicore/wwwroot/htmlpage.html
@@ -3,8 +3,72 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="/vue.js"></script>
+    <style>
+        .blue {
+            background-color: blue;
+        }
+        .italic {
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
-    <h1>hello, world</h1>
+    <div id="act-hello">
+        <h1 v-bind:title="greet" :class="[{blue: istrue}, fs]">
+            {{greet}}
+        </h1>
+        <a v-if="isfalse">alter</a>
+        <a v-show="istrue">show</a>
+        <!--<a v-else-if="istrue">else alter</a>
+        <span v-else>no alter</span>-->
+        <ul>
+            <li v-for="(s, i) of students" v-if="i>1">
+                <span >{{i}}--{{s+'--'}}</span>
+            </li>
+        </ul>
+        <p v-for="(prop, key, i) in leo">{{i}}--{{key}}--{{prop}}</p>
+    </div>
+    
+    <h1 id="act-class" v-bind:title="greet" :class="{blue: istrue, italic: isfalse}">{{greet}}</h1>
+    <h2 v-html="html" id="act-html" :disabled="isDisabled" :[attr]="greet" :style="styling"></h2>
+    
+    <script>
+        var vm = new Vue({
+            el: "#act-hello",
+            data: {
+                greet: "hello",
+                bg: "blue",
+                fs: "italic",
+                istrue: true,
+                isfalse: false,
+                students: ["leo", "tik", "ash"],
+                leo: { id: 1, name: "leo" }
+            }
+        });
+        var vm22 = new Vue({
+            el: "#act-class",
+            data: {
+                greet: "hello",
+                bg: "blue",
+                fs: "italic",
+                istrue: true,
+                isfalse: false
+            }
+        });
+        var vm2 = new Vue({
+            el: "#act-html",
+            data: {
+                html: "<a href='https://www.baidu.com'>dianwo</a>",
+                isDisabled: true,
+                attr: "title",
+                greet: "hello",
+                color: "blue",
+                styling: {
+                    backgroundColor: "blue"
+                }
+            }
+        })
+    </script>
 </body>
 </html>
